Style header component

--- a/index.html
+++ b/index.html
@@ -4,12 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Library</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="header">
         <div class="container">
-            <h1>Library</h1>
-            <div class="button">New Book</div>
+            <div class="nav">
+                <h1>Library</h1>
+                <div class="button">
+                    <p class="new-book">Add Book</p>
+                </div>
+            </div>
         </div>
     </div>
     <main class="main">
