Style book cards

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <title>Library</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="header">
-        <div class="container">
+    <div class="container">
+        <div class="header">
             <div class="nav">
                 <h1>Library</h1>
                 <div class="button">
@@ -18,9 +18,7 @@
                 </div>
             </div>
         </div>
-    </div>
-    <main class="main">
-        <div class="container">
+        <main class="main">
             <div class="card-group">
                 <div class="card">
                     <p class="title">The Life-Changing Magic of Tidying Up</p>
@@ -30,25 +28,25 @@
                 <div class="card">
                     <p class="title">Ella Enchanted</p>
                     <p class="author">Gail Carson Levine</p>
-                    <p class="page-count">240</p>
+                    <p class="page-count">240 Pages</p>
                 </div>
                 <div class="card">
                     <p class="title">Overshare: Love, Laughs, Sexuality and Secrets</p>
                     <p class="author">Rose Ellen Dix & Rosie Spaughton</p>
-                    <p class="page-count">257</p>
+                    <p class="page-count">257 Pages</p>
                 </div>
                 <div class="card">
                     <p class="title">The Making of a Manager</p>
                     <p class="author">Julie Zhuo</p>
-                    <p class="page-count">288</p>
+                    <p class="page-count">288 Pages</p>
                 </div>
                 <div class="card">
                     <p class="title">Harry Potter and the Chamber of Secrets</p>
                     <p class="author">J.K. Rowling</p>
-                    <p class="page-count">341</p>
+                    <p class="page-count">341 Pages</p>
                 </div>
             </div>
-        </div>
-    </main>
+        </main>
+    </div>
 </body>
 </html>
