--- a/index.html
+++ b/index.html
@@ -45,6 +45,16 @@
                     <p class="author">J.K. Rowling</p>
                     <p class="page-count">341 Pages</p>
                 </div>
+                <div class="card">
+                    <p class="title">Becoming</p>
+                    <p class="author">Michelle Obama</p>
+                    <p class="page-count">448 Pages</p>
+                </div>
+                <div class="card">
+                    <p class="title">A Promised Land</p>
+                    <p class="author">Barack Obama</p>
+                    <p class="page-count">768 Pages</p>
+                </div>
             </div>
         </main>
     </div>
