Add createCard() function

--- a/index.html
+++ b/index.html
@@ -20,43 +20,10 @@
         </div>
         <main class="main">
             <div class="card-group">
-                <div class="card">
-                    <p class="title">The Life-Changing Magic of Tidying Up</p>
-                    <p class="author">Marie Kondo</p>
-                    <p class="page-count">226 Pages</p>
-                </div>
-                <div class="card">
-                    <p class="title">Ella Enchanted</p>
-                    <p class="author">Gail Carson Levine</p>
-                    <p class="page-count">240 Pages</p>
-                </div>
-                <div class="card">
-                    <p class="title">Overshare: Love, Laughs, Sexuality and Secrets</p>
-                    <p class="author">Rose Ellen Dix & Rosie Spaughton</p>
-                    <p class="page-count">257 Pages</p>
-                </div>
-                <div class="card">
-                    <p class="title">The Making of a Manager</p>
-                    <p class="author">Julie Zhuo</p>
-                    <p class="page-count">288 Pages</p>
-                </div>
-                <div class="card">
-                    <p class="title">Harry Potter and the Chamber of Secrets</p>
-                    <p class="author">J.K. Rowling</p>
-                    <p class="page-count">341 Pages</p>
-                </div>
-                <div class="card">
-                    <p class="title">Becoming</p>
-                    <p class="author">Michelle Obama</p>
-                    <p class="page-count">448 Pages</p>
-                </div>
-                <div class="card">
-                    <p class="title">A Promised Land</p>
-                    <p class="author">Barack Obama</p>
-                    <p class="page-count">768 Pages</p>
-                </div>
+                
             </div>
         </main>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
