--- a/index.html
+++ b/index.html
@@ -23,6 +23,30 @@
             </div>
         </main>
     </div>
+    <div class="dark-overlay">
+        <div class="modal">
+            <div class="modal-content">
+                <p class="title">Add Book</p>
+                <div class="form-group">
+                    <label for="title">Title</label>
+                    <input type="text" id="title" required>
+                </div>
+                <div class="form-group">
+                    <label for="author">Author</label>
+                    <input type="text" id="author" required>
+                </div>
+                <div class="form-group">
+                    <label for="pages">Title</label>
+                    <input type="text" id="pages" required>
+                </div>
+            </div>
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
+
+<!-- <label for="name">Name (4 to 8 characters):</label>
+
+<input type="text" id="name" name="name" required
+       minlength="4" maxlength="8" size="10"> -->
