--- a/index.html
+++ b/index.html
@@ -25,19 +25,27 @@
     </div>
     <div class="dark-overlay">
         <div class="modal">
+            <div class="modal-header">
+                <h3 class="modal-heading">Add Book</h3>
+                <p class="modal-subtext">Newly added books will be marked as unread.</p>
+            </div>
             <div class="modal-content">
-                <p class="title">Add Book</p>
-                <div class="form-group">
-                    <label for="title">Title</label>
-                    <input type="text" id="title" required>
-                </div>
-                <div class="form-group">
-                    <label for="author">Author</label>
-                    <input type="text" id="author" required>
-                </div>
-                <div class="form-group">
-                    <label for="pages">Title</label>
-                    <input type="text" id="pages" required>
+                <label class="custom-field">
+                    <input class="titleInput" type="text" required>
+                    <span class="placeholder">Title</span>
+                </label>
+                <label class="custom-field">
+                    <input class="authorInput" type="text" required>
+                    <span class="placeholder">Author</span>
+                </label>
+                <label class="custom-field">
+                    <input class="pagesInput" type="text" required>
+                    <span class="placeholder">Number of Pages</span>
+                </label>
+            </div>
+            <div class="modal-footer">
+                <div class="button">
+                    <p class="add-book">Add Book</p>
                 </div>
             </div>
         </div>
