Add behavior to open modal when user clicks 'Add Book'

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="header">
             <div class="nav">
                 <h1>Library</h1>
-                <div class="button button-top-right">
+                <div class="button button-top-right" id="add-btn-3">
                     <p class="new-book">Add Book</p>
                 </div>
             </div>
@@ -30,7 +30,7 @@
             <div class="null-state">
                 <h2 class="null-header">You don't have any books...</h2>
                 <p class="null-subtext">Add them here so you can keep track of your progress in one place.</p>
-                <div class="button">
+                <div class="button" id="add-btn-1">
                     <p class="new-book">Add Book</p>
                 </div>
             </div>
@@ -60,7 +60,7 @@
                 <div class="button cancel-btn">
                     <p class="cancel">Cancel</p>
                 </div>
-                <div class="button add-btn">
+                <div class="button" id="add-btn-2">
                     <p class="add-book">Add Book</p>
                 </div>
             </div>
