Add behavior to dismiss modal when user clicks 'Cancel'

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <!-- null state -->
             <div class="null-state">
                 <h2 class="null-header">You don't have any books...</h2>
-                <p class="null-subtext">Add them here so you can keep track of your progress in one place.</p>
+                <p class="null-subtext">Add them here so you can keep track of all the ones you're reading and have read!</p>
                 <div class="button" id="add-btn-1">
                     <p class="new-book">Add Book</p>
                 </div>
@@ -44,15 +44,15 @@
             </div>
             <div class="modal-content">
                 <label class="custom-field">
-                    <input class="titleInput" type="text" required>
+                    <input type="text" required>
                     <span class="placeholder">Title</span>
                 </label>
                 <label class="custom-field">
-                    <input class="authorInput" type="text" required>
+                    <input type="text" required>
                     <span class="placeholder">Author</span>
                 </label>
                 <label class="custom-field">
-                    <input class="pagesInput" type="text" required>
+                    <input type="text" required>
                     <span class="placeholder">Number of Pages</span>
                 </label>
             </div>
