Add collectBookInfo() function

--- a/index.html
+++ b/index.html
@@ -44,15 +44,15 @@
             </div>
             <div class="modal-content">
                 <label class="custom-field">
-                    <input type="text" required>
+                    <input type="text" class="titleInput" required>
                     <span class="placeholder">Title</span>
                 </label>
                 <label class="custom-field">
-                    <input type="text" required>
+                    <input type="text" class="authorInput" required>
                     <span class="placeholder">Author</span>
                 </label>
                 <label class="custom-field">
-                    <input type="text" required>
+                    <input type="text" class="pagesInput" required>
                     <span class="placeholder">Number of Pages</span>
                 </label>
             </div>
