Add behavior for card removal

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
         <main class="main">
             <!-- card group -->
-            <div class="card-group">
+            <div class="card-group" id="card-group">
                 <!-- book0 -->
                 <!-- book1 -->
                 <!-- book2 -->
