Remove 'read' from book object

--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
         <main class="main">
             <!-- card group -->
             <div class="card-group" id="card-group">
-                <!-- book0 -->
-                <!-- book1 -->
-                <!-- book2 -->
+                <!-- books go here! -->
             </div>
             <!-- null state -->
             <div class="null-state">
