Add event listener to each 'Remove' link

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <!-- header -->
         <div class="header">
             <div class="nav">
-                <h1>Library</h1>
+                <h1 id="header">Library</h1>
                 <div class="button button-top-right add-btn" id="add-btn-1">
                     <p class="new-book">Add Book</p>
                 </div>
