--- a/index.html
+++ b/index.html
@@ -23,6 +23,18 @@
             <!-- card group -->
             <div class="card-group" id="card-group">
                 <!-- books go here! -->
+                <div class="card">
+                    <div class="status">
+                        <input type="checkbox" class="read-state">
+                        <label for="read-state">Already Read</label>
+                    </div>
+                    <p class="title">The Life-Changing Magic of Tidying Up</p>
+                    <p class="author">Marie Kondo</p>
+                    <div class="book-footer">
+                        <p class="pages">100 Pages</p>
+                        <p class="remove">Remove</p>
+                    </div>
+                </div>
             </div>
             <!-- null state -->
             <div class="null-state">
