Style 'Read' checkbox on book card

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
 </head>
 <body>
     <div class="container">
@@ -23,10 +24,10 @@
             <!-- card group -->
             <div class="card-group" id="card-group">
                 <!-- books go here! -->
-                <!-- <div class="card">
+                <div class="card">
                     <div class="status">
                         <input type="checkbox" class="read-state">
-                        <label for="read-state">Already Read</label>
+                        <label for="read-state">I've Read This</label>
                     </div>
                     <p class="title">The Life-Changing Magic of Tidying Up</p>
                     <p class="author">Marie Kondo</p>
@@ -34,7 +35,7 @@
                         <p class="pages">100 Pages</p>
                         <p class="remove">Remove</p>
                     </div>
-                </div> -->
+                </div>
             </div>
             <!-- null state -->
             <div class="null-state">
