Update createCard() function to include 'Read' status

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <!-- card group -->
             <div class="card-group" id="card-group">
                 <!-- books go here! -->
-                <div class="card">
+                <!-- <div class="card">
                     <div class="status">
                         <input type="checkbox" class="read-state">
                         <label for="read-state">I've Read This</label>
@@ -35,7 +35,7 @@
                         <p class="pages">100 Pages</p>
                         <p class="remove">Remove</p>
                     </div>
-                </div>
+                </div> -->
             </div>
             <!-- null state -->
             <div class="null-state">
