Fix bug where checking label on any card toggles first card's checkbox

--- a/index.html
+++ b/index.html
@@ -24,23 +24,19 @@
             <!-- card group -->
             <div class="card-group" id="card-group">
                 <!-- books go here! -->
-                <!-- <div class="card"> -->
-                    <!-- <div class="status">
-                        <input type="checkbox" class="read-state">
+                <!-- <div class="card">
+                    <div class="status">
+                        <input type="checkbox" id="read-state">
                         <label for="read-state">I've Read This</label>
-                    </div> -->
-                    <!-- <p class="title">The Life-Changing Magic of Tidying Up</p>
+                    </div>
+                    <p class="title">The Life-Changing Magic of Tidying Up</p>
                     <p class="author">Marie Kondo</p>
                     <div class="book-footer">
                         <p class="pages">100 Pages</p>
                         <p class="remove">Remove</p>
-                    </div> -->
-                    <!-- <div class="status">
-                        <input type="checkbox" class="read-state">
-                        <label for="read-state">I've Read This</label>
-                    </div> -->
+                    </div>
                 </div>
-            </div>
+            </div> -->
             <!-- null state -->
             <div class="null-state">
                 <h2 class="null-header">You don't have any books...</h2>
