--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@
                     <input type="text" class="pagesInput" required>
                     <span class="placeholder">Number of Pages</span>
                 </label>
+                <div class="status">
+                    <input type="checkbox" id="read-state">
+                    <label for="read-state">I've already read this book</label>
+                </div>
             </div>
             <div class="modal-footer">
                 <div class="button cancel-btn">
