Fix bug where making book as 'Read' marks all previous books as 'Read' as well

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <input type="text" class="pagesInput" required>
                     <span class="placeholder">Number of Pages</span>
                 </label>
-                <div class="status">
+                <div class="modal-status">
                     <input type="checkbox" id="read-state">
                     <label for="read-state">I've already read this book</label>
                 </div>
